--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   drupal:
-    image: drupal:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - 8080:80
     volumes:
